Readme updated, removed javascript CSS, changed HTML title.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Library</title>
+	<title>Library</title>
 	<script src="js/library.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
