Changed div names Updated README.md

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div id="library"></div>
-		<div id="library2"></div>
-		<div id="library3"></div>
+		<div id="name"></div>
+		<div id="time"></div>
+		<div id="date"></div>
 	</div>
 <script>Library.play();</script>
 </body>
