Readme updated. Added script to change backgroundimage in HTML.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 		<div id="date"></div>
 	</div>
 <script>Library.play();</script>
+<script>Library.backgroundImage("img/bg3.jpg");</script>
 </body>
 </html>
